--- a/css/styles.css
+++ b/css/styles.css
@@ -176,21 +176,27 @@ select::-ms-expand {
 .wrap {
   text-align: center;
 }
+.box__img {
+  background-image: url(/images/mameta1.JPG);
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 .box {
   display: inline-block;
   width: 300px;
   width: 18.75rem;
   background-color: #f00;
   overflow: hidden;
+  position: relative;
 }
 .box::before {
-  display: inline-block;
+  display: block;
   content: "";
   padding-top: 75%;
-  background-image: url(/images/mameta1.JPG);
-  background-size: cover;
-  width: 100%;
-  -webkit-transform: scale(1.5);
-          transform: scale(1.5);
 }
 /*# sourceMappingURL=styles.css.map */
