--- a/src/sass/module/box/_box.scss
+++ b/src/sass/module/box/_box.scss
@@ -4,6 +4,7 @@
   width: rem(300);
   background-color: #f00;
   overflow: hidden;
+  position: relative;
   @include mq(md) {
   }
   @include mq(xl) {
@@ -12,15 +13,26 @@
 
 // 擬似要素で画像を表示
 .box::before {
-  display: inline-block;
+  display: block;
   content: "";
   padding-top: 75%;
-  background-image: url(/images/mameta1.JPG);
-  background-size: cover;
-  width: 100%;
-  transform: scale(1.5);
   @include mq(md) {
   }
   @include mq(xl) {
   }
 }
+
+// 擬似要素で画像を表示
+// .box::before {
+//   display: inline-block;
+//   content: "";
+//   padding-top: 75%;
+//   background-image: url(/images/mameta1.JPG);
+//   background-size: cover;
+//   width: 100%;
+//   transform: scale(1.5);
+//   @include mq(md) {
+//   }
+//   @include mq(xl) {
+//   }
+// }
