--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,8 @@ select::-ms-expand {
   height: 100%;
 }
 .box__contents {
-  background-color: #f00;
+  background-color: #333;
+  color: #fff;
 }
 .box__img {
   background-image: url(/images/mameta1.JPG);
@@ -209,6 +210,7 @@ select::-ms-expand {
   padding-top: 75%;
 }
 .box1-1 {
+  background-color: #f00;
   display: inline-block;
   max-width: 375px;
   max-width: 23.4375rem;
