--- a/src/sass/module/box/_box__contents.scss
+++ b/src/sass/module/box/_box__contents.scss
@@ -1,6 +1,7 @@
 @use "global" as *;
 .box__contents {
-  background-color: #f00;
+  background-color: #333;
+  color: #fff;
   @include mq(md) {
   }
   @include mq(xl) {
